[project]
name = "dependabot-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.212.0",
    "boto3==1.42.0",
    "entsoe-py==0.7.4",
    "fastapi==0.122.0",
    "moto==5.1.5",
    "responses==0.25.8",
    "ruff==0.13.0",
    "scipy<1.16",
    "urllib3==2.5.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
]
